<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.mainactivity.MainActivity"
    android:orientation="vertical"
    android:gravity="center">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etxt_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/txt_latitude"
        android:inputType="numberDecimal|numberSigned"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etxt_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_longitude"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="15dp"
        android:inputType="numberDecimal|numberSigned"/>

    <Button
        android:id="@+id/btn_check_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_check_weather"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_check_queries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_show_query"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/txt_last_searches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_searches"
        android:layout_margin="5dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="3"
        tools:listitem="@layout/query_item_cell"/>

</androidx.appcompat.widget.LinearLayoutCompat>