<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/txt_latitude_row_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_latitude"
            android:textSize="15sp"
            android:layout_weight="0"
            android:textAlignment="textStart"/>

        <TextView
            android:id="@+id/txt_latitude_cell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_not_available"
            android:textSize="15sp"
            android:layout_weight="2"
            android:textAlignment="center"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/txt_longitude_row_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_longitude"
            android:textSize="15sp"
            android:layout_weight="0"
            android:textAlignment="textStart"/>

        <TextView
            android:id="@+id/txt_longitude_cell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_not_available"
            android:textSize="15sp"
            android:layout_weight="2"
            android:textAlignment="center"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/txt_avg_temp_row_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_avg_temp"
            android:textSize="15sp"
            android:layout_weight="0"
            android:textAlignment="textStart"/>

        <TextView
            android:id="@+id/txt_avg_temp_cell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_not_available"
            android:textSize="15sp"
            android:layout_weight="2"
            android:textAlignment="center"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>



</androidx.appcompat.widget.LinearLayoutCompat>